fer-de-lance/tests/negative/input_in_fun.snek
(defn (isodd n)
  (if (< input 0)
      (isodd (- 0 n))
      (if (= n 0)
          false
          (iseven (sub1 n))
      )
  )
)

(defn (iseven n)
  (if (= n 0)
      true
      (isodd (sub1 n))
  )
)

(block
  (print input)
  (print (isodd input))
)
